<resources>
    <string name="app_name">NUMAD17S-YongqiChao</string>
    <string name="about">Yongqi Chao \njay118chao@gmail.com \n1st year MS \nComputer Science</string>
    <string name="backButton">back</string>
    <string name="aboutButton">About</string>
    <string name="errorButton">Generate Error</string>
    <string name="dictionaryButton">Dictionary</string>
    <string name="wordgameButton">Word Game</string>
    <string name="quitButton">Quit</string>
    <string name="pictureDescription">Picture of myself</string>

    <string name="returnButton">Return to Menu</string>
    <string name="clearButton">Clear</string>
    <string name="acknoledgements">Acknowledgment</string>
    <string name="hint">You can start to look up words while indexing</string>
    <string name="shapeofyou">Song: Shape Of You --- Ed Sheeran</string>

    <string name="SOUND">SOUND:</string>
    <string name="soundDescrip"> -----Beep Sound : Adapt from soundbible.com.| License: Attribution 3.0 | Recorded by Mastercard | File Size: 21 KB\n
        -----http://soundbible.com/1806-Censored-Beep.html\n\n
        Button Click Sound: Adapt from Hello Android 4th Edition. Ultimate Tic Tac Toe game.
    </string>
    <string name="SONG">SONG:</string>
    <string name="songDescrip"> -----Moon Flow -- by Nomak From Album: Muziq and Foto\n\n</string>
    <string name="MAPGAMEPICTURENDescrip"> -----Red Coin --\n   From www.coinapp.org \n
        -----Gold Coin --\n   From https://www.iconexperience.com/g_collection/icons/?icon=money_coin\n
        -----Direction JSON Parser --\n From "Drawing driving route directions between two locations"\n
             BY George Mathew\n
        -- "http://wptrafficanalyzer.in/blog/drawing-driving-route-directions-between-two-locations-using-google-directions-in-google-map-android-api-v2/"</string>


    <!--this part is for word game-->

    <string name="app_name_wordgame">Word Game</string>
    <string name="long_app_name_wordgame">Word Game</string>
    <string name="action_settings_wordgame">Settings</string>
    <string name="restart_label_wordgame">Restart</string>
    <string name="main_menu_label_wordgame">Main Menu</string>
    <string name="declare_winner_wordgame">%1$s is the winner</string>
    <string name="continue_label_wordgame">Continue</string>
    <string name="new_game_label_wordgame">New Game</string>
    <string name="about_title_wordgame">About Ultimate Tic Tac Toe</string>
    <string name="about_label_wordgame">About</string>
    <string name="ok_label_wordgame">OK</string>
    <string name="about_text_wordgame">\
        This game is played just like
regular Scroggle game. The difference is that this game has 2 phases.
you have to find as many words as you can in phase 1.\n\
\n\
In phase 2, you will use characters you matched in phase 1.
</string>
    <string name="hintWordGame">\
            The GREEN tile means it is available. You can make move in these green tiles.\n\n
            The YELLOW tile means it is selected by you. You cannot change the state of yellow tiles.\n\n
            The RED tile means it is your last move. You can change your last move by cliking red tile again.\n\n
            The PINK tile means it is matched You cannot change any matched tiles.\n\n
            ****If you start a new game and the green tiles has no response to your cliking. Please just wait for
            a second, it is loading the game.\n\n
        </string>
    <string name="textforchronometer">Time Limitation: 3: 00</string>
    <string name="selectItButton">Select It</string>
    <string name="startPhase2">Start Phase 2</string>
    <string name="hintwordgame">Hint</string>
    <string name="pauseGame">Pause</string>
    <string name="resumeGame">Resume</string>
    <string name="music">Music On/Off</string>
    <string name="scoreboard">Scoreboard</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="chooseUsername">Enter An Username</string>
    <string name="skip">Skip</string>
    <string name="leaderboardTop10">Leaderbord Top 10</string>
    <string name="scoreboardTop10">Scoreboard Top 10</string>


    <string name="quickstart_message">The Log Token button logs the Registration token to the log. The Send Notification Button sends the notification to the client device.</string>
    <string name="send_notification">Send Notification</string>
    <string name="log_token">Log Token</string>


    <string name="msg_subscribed">Subscribed to news topic</string>
    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>

    <string name="go_to_fcm_demo">FCM Demo</string>
    <string name="go_to_realtime_database_demo">Realtime Database Demo</string>

    <string name="username">User Name</string>
    <string name="score">Score</string>

    <string name="add5">Add 5</string>
    <string name="send_notification_text">Send Android Notification</string>
    <string name="subscribe_to_news">Subscribe to \"News\"</string>
    <string name="title_activity_mapgame_map">Map</string>

    <string name="hintMapGame">\
        Your Goal: Collect COINS to Level Up\n\n
        Red Coin: Placed by Yourself and Can not Be Collected\n\n
        Gold Coin: Placed by Other Players and Can Be Collected\n\n\n

        Start Running!
        </string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

</resources>
