<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_dictionary"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.neu.madcourse.yongqichao.DictionaryActivity">

    <Button
        android:text="@string/acknoledgements"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/acknowledgment"
        android:layout_marginTop="109dp"
        android:layout_below="@+id/returnButton"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:text="@string/returnButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="105dp"
        android:id="@+id/returnButton"
        android:layout_below="@+id/clearButton"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <AutoCompleteTextView
        android:text=""
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/autoCompleteTextView"
        android:layout_toLeftOf="@+id/acknowledgment"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/progressBar2" />

    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/listofw"
        android:layout_below="@+id/autoCompleteTextView"
        android:layout_toLeftOf="@+id/acknowledgment"
        android:layout_toStartOf="@+id/acknowledgment" />

    <Button
        android:text="@string/clearButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/clearButton"
        android:layout_below="@+id/progressBar2"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:text="TextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:id="@+id/dictionaryLoadingInfo"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <ProgressBar
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:id="@+id/progressBar2"
        android:layout_below="@+id/dictionaryLoadingInfo"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
